AGONYParser.py
# Generated from AGONY.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class AGONYParser ( Parser ):

    grammarFileName = "AGONY.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'def '", "'('", "','", "')'", "':'", 
                     "'true'", "'false'", "'not'", "'if'", "'else'", "'while'", 
                     "'for'", "'in'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "NL", "VARNAME", "LETTERS", 
                      "BOOLOPERATOR", "COMPARISON", "EQUALS", "OPERATOR", 
                      "NUMBER", "COMMENT", "WHITESPACE", "INDENT", "DEDENT" ]

    RULE_start = 0
    RULE_line = 1
    RULE_assignment = 2
    RULE_operation = 3
    RULE_functiondef = 4
    RULE_functioncall = 5
    RULE_value = 6
    RULE_boolexpression = 7
    RULE_bool = 8
    RULE_if = 9
    RULE_while = 10
    RULE_for = 11

    ruleNames =  [ "start", "line", "assignment", "operation", "functiondef", 
                   "functioncall", "value", "boolexpression", "bool", "if", 
                   "while", "for" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    NL=14
    VARNAME=15
    LETTERS=16
    BOOLOPERATOR=17
    COMPARISON=18
    EQUALS=19
    OPERATOR=20
    NUMBER=21
    COMMENT=22
    WHITESPACE=23
    INDENT=24
    DEDENT=25

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AGONYParser.LineContext)
            else:
                return self.getTypedRuleContext(AGONYParser.LineContext,i)


        def getRuleIndex(self):
            return AGONYParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = AGONYParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 25 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 24
                self.line()
                self.state = 27 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (((_la) & ~0x3f) == 0 and ((1 << _la) & 4233730) != 0):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functiondef(self):
            return self.getTypedRuleContext(AGONYParser.FunctiondefContext,0)


        def if_(self):
            return self.getTypedRuleContext(AGONYParser.IfContext,0)


        def while_(self):
            return self.getTypedRuleContext(AGONYParser.WhileContext,0)


        def for_(self):
            return self.getTypedRuleContext(AGONYParser.ForContext,0)


        def NL(self):
            return self.getToken(AGONYParser.NL, 0)

        def EOF(self):
            return self.getToken(AGONYParser.EOF, 0)

        def assignment(self):
            return self.getTypedRuleContext(AGONYParser.AssignmentContext,0)


        def COMMENT(self):
            return self.getToken(AGONYParser.COMMENT, 0)

        def functioncall(self):
            return self.getTypedRuleContext(AGONYParser.FunctioncallContext,0)


        def getRuleIndex(self):
            return AGONYParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)




    def line(self):

        localctx = AGONYParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_line)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.state = 29
                self.functiondef()
                pass
            elif token in [15, 22]:
                self.state = 33
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 30
                    self.assignment()
                    pass

                elif la_ == 2:
                    self.state = 31
                    self.match(AGONYParser.COMMENT)
                    pass

                elif la_ == 3:
                    self.state = 32
                    self.functioncall()
                    pass


                self.state = 35
                _la = self._input.LA(1)
                if not(_la==-1 or _la==14):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass
            elif token in [9]:
                self.state = 36
                self.if_()
                pass
            elif token in [11]:
                self.state = 37
                self.while_()
                pass
            elif token in [12]:
                self.state = 38
                self.for_()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self):
            return self.getToken(AGONYParser.VARNAME, 0)

        def EQUALS(self):
            return self.getToken(AGONYParser.EQUALS, 0)

        def value(self):
            return self.getTypedRuleContext(AGONYParser.ValueContext,0)


        def bool_(self):
            return self.getTypedRuleContext(AGONYParser.BoolContext,0)


        def getRuleIndex(self):
            return AGONYParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = AGONYParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.match(AGONYParser.VARNAME)
            self.state = 42
            self.match(AGONYParser.EQUALS)
            self.state = 45
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 43
                self.value()
                pass

            elif la_ == 2:
                self.state = 44
                self.bool_()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(AGONYParser.NUMBER, 0)

        def OPERATOR(self):
            return self.getToken(AGONYParser.OPERATOR, 0)

        def value(self):
            return self.getTypedRuleContext(AGONYParser.ValueContext,0)


        def VARNAME(self):
            return self.getToken(AGONYParser.VARNAME, 0)

        def getRuleIndex(self):
            return AGONYParser.RULE_operation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperation" ):
                listener.enterOperation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperation" ):
                listener.exitOperation(self)




    def operation(self):

        localctx = AGONYParser.OperationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_operation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [21]:
                self.state = 47
                self.match(AGONYParser.NUMBER)
                self.state = 48
                self.match(AGONYParser.OPERATOR)
                self.state = 49
                self.value()
                pass
            elif token in [15]:
                self.state = 50
                self.match(AGONYParser.VARNAME)
                self.state = 51
                self.match(AGONYParser.OPERATOR)
                self.state = 52
                self.value()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctiondefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self, i:int=None):
            if i is None:
                return self.getTokens(AGONYParser.VARNAME)
            else:
                return self.getToken(AGONYParser.VARNAME, i)

        def INDENT(self):
            return self.getToken(AGONYParser.INDENT, 0)

        def DEDENT(self):
            return self.getToken(AGONYParser.DEDENT, 0)

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AGONYParser.LineContext)
            else:
                return self.getTypedRuleContext(AGONYParser.LineContext,i)


        def getRuleIndex(self):
            return AGONYParser.RULE_functiondef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctiondef" ):
                listener.enterFunctiondef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctiondef" ):
                listener.exitFunctiondef(self)




    def functiondef(self):

        localctx = AGONYParser.FunctiondefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_functiondef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(AGONYParser.T__0)
            self.state = 56
            self.match(AGONYParser.VARNAME)
            self.state = 57
            self.match(AGONYParser.T__1)
            self.state = 67
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                pass
            elif token in [15]:
                self.state = 59
                self.match(AGONYParser.VARNAME)
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==3:
                    self.state = 60
                    self.match(AGONYParser.T__2)
                    self.state = 61
                    self.match(AGONYParser.VARNAME)
                    self.state = 66
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            else:
                raise NoViableAltException(self)

            self.state = 69
            self.match(AGONYParser.T__3)
            self.state = 70
            self.match(AGONYParser.T__4)
            self.state = 71
            self.match(AGONYParser.INDENT)
            self.state = 73 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 72
                    self.line()

                else:
                    raise NoViableAltException(self)
                self.state = 75 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

            self.state = 79
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 77
                self.match(AGONYParser.DEDENT)
                pass

            elif la_ == 2:
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctioncallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self):
            return self.getToken(AGONYParser.VARNAME, 0)

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AGONYParser.ValueContext)
            else:
                return self.getTypedRuleContext(AGONYParser.ValueContext,i)


        def getRuleIndex(self):
            return AGONYParser.RULE_functioncall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctioncall" ):
                listener.enterFunctioncall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctioncall" ):
                listener.exitFunctioncall(self)




    def functioncall(self):

        localctx = AGONYParser.FunctioncallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_functioncall)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(AGONYParser.VARNAME)
            self.state = 82
            self.match(AGONYParser.T__1)
            self.state = 92
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                pass
            elif token in [2, 15, 21]:
                self.state = 84
                self.value()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==3:
                    self.state = 85
                    self.match(AGONYParser.T__2)
                    self.state = 86
                    self.value()
                    self.state = 91
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            else:
                raise NoViableAltException(self)

            self.state = 94
            self.match(AGONYParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self):
            return self.getToken(AGONYParser.VARNAME, 0)

        def NUMBER(self):
            return self.getToken(AGONYParser.NUMBER, 0)

        def operation(self):
            return self.getTypedRuleContext(AGONYParser.OperationContext,0)


        def value(self):
            return self.getTypedRuleContext(AGONYParser.ValueContext,0)


        def functioncall(self):
            return self.getTypedRuleContext(AGONYParser.FunctioncallContext,0)


        def getRuleIndex(self):
            return AGONYParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)




    def value(self):

        localctx = AGONYParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_value)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 96
                self.match(AGONYParser.VARNAME)
                pass

            elif la_ == 2:
                self.state = 97
                self.match(AGONYParser.NUMBER)
                pass

            elif la_ == 3:
                self.state = 98
                self.operation()
                pass

            elif la_ == 4:
                self.state = 99
                self.match(AGONYParser.T__1)
                self.state = 100
                self.value()
                self.state = 101
                self.match(AGONYParser.T__3)
                pass

            elif la_ == 5:
                self.state = 103
                self.functioncall()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BoolexpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bool_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AGONYParser.BoolContext)
            else:
                return self.getTypedRuleContext(AGONYParser.BoolContext,i)


        def BOOLOPERATOR(self, i:int=None):
            if i is None:
                return self.getTokens(AGONYParser.BOOLOPERATOR)
            else:
                return self.getToken(AGONYParser.BOOLOPERATOR, i)

        def getRuleIndex(self):
            return AGONYParser.RULE_boolexpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolexpression" ):
                listener.enterBoolexpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolexpression" ):
                listener.exitBoolexpression(self)




    def boolexpression(self):

        localctx = AGONYParser.BoolexpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_boolexpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.state = 106
                self.bool_()
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==17:
                    self.state = 107
                    self.match(AGONYParser.BOOLOPERATOR)
                    self.state = 108
                    self.bool_()
                    self.state = 113
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 2:
                self.state = 114
                self.match(AGONYParser.T__1)
                self.state = 115
                self.bool_()
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==17:
                    self.state = 116
                    self.match(AGONYParser.BOOLOPERATOR)
                    self.state = 117
                    self.bool_()
                    self.state = 122
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 123
                self.match(AGONYParser.T__3)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BoolContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AGONYParser.ValueContext)
            else:
                return self.getTypedRuleContext(AGONYParser.ValueContext,i)


        def COMPARISON(self):
            return self.getToken(AGONYParser.COMPARISON, 0)

        def bool_(self):
            return self.getTypedRuleContext(AGONYParser.BoolContext,0)


        def getRuleIndex(self):
            return AGONYParser.RULE_bool

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBool" ):
                listener.enterBool(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBool" ):
                listener.exitBool(self)




    def bool_(self):

        localctx = AGONYParser.BoolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_bool)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.state = 127
                self.match(AGONYParser.T__5)
                pass

            elif la_ == 2:
                self.state = 128
                self.match(AGONYParser.T__6)
                pass

            elif la_ == 3:
                self.state = 129
                self.value()
                self.state = 130
                self.match(AGONYParser.COMPARISON)
                self.state = 131
                self.value()
                pass

            elif la_ == 4:
                self.state = 133
                self.match(AGONYParser.T__7)
                self.state = 134
                self.bool_()
                pass

            elif la_ == 5:
                self.state = 135
                self.match(AGONYParser.T__1)
                self.state = 136
                self.bool_()
                self.state = 137
                self.match(AGONYParser.T__3)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def boolexpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AGONYParser.BoolexpressionContext)
            else:
                return self.getTypedRuleContext(AGONYParser.BoolexpressionContext,i)


        def INDENT(self, i:int=None):
            if i is None:
                return self.getTokens(AGONYParser.INDENT)
            else:
                return self.getToken(AGONYParser.INDENT, i)

        def DEDENT(self, i:int=None):
            if i is None:
                return self.getTokens(AGONYParser.DEDENT)
            else:
                return self.getToken(AGONYParser.DEDENT, i)

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AGONYParser.LineContext)
            else:
                return self.getTypedRuleContext(AGONYParser.LineContext,i)


        def getRuleIndex(self):
            return AGONYParser.RULE_if

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf" ):
                listener.enterIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf" ):
                listener.exitIf(self)




    def if_(self):

        localctx = AGONYParser.IfContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_if)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(AGONYParser.T__8)
            self.state = 142
            self.boolexpression()
            self.state = 143
            self.match(AGONYParser.T__4)
            self.state = 144
            self.match(AGONYParser.INDENT)
            self.state = 146 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 145
                    self.line()

                else:
                    raise NoViableAltException(self)
                self.state = 148 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,16,self._ctx)

            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
            if la_ == 1:
                self.state = 150
                self.match(AGONYParser.DEDENT)
                pass

            elif la_ == 2:
                pass


            self.state = 171
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,21,self._ctx)
            if la_ == 1:
                pass

            elif la_ == 2:
                self.state = 155
                self.match(AGONYParser.T__9)
                self.state = 158
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [5]:
                    pass
                elif token in [2, 6, 7, 8, 15, 21]:
                    self.state = 157
                    self.boolexpression()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 160
                self.match(AGONYParser.T__4)
                self.state = 161
                self.match(AGONYParser.INDENT)
                self.state = 163 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 162
                        self.line()

                    else:
                        raise NoViableAltException(self)
                    self.state = 165 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,19,self._ctx)

                self.state = 169
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,20,self._ctx)
                if la_ == 1:
                    self.state = 167
                    self.match(AGONYParser.DEDENT)
                    pass

                elif la_ == 2:
                    pass


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def boolexpression(self):
            return self.getTypedRuleContext(AGONYParser.BoolexpressionContext,0)


        def INDENT(self):
            return self.getToken(AGONYParser.INDENT, 0)

        def DEDENT(self):
            return self.getToken(AGONYParser.DEDENT, 0)

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AGONYParser.LineContext)
            else:
                return self.getTypedRuleContext(AGONYParser.LineContext,i)


        def getRuleIndex(self):
            return AGONYParser.RULE_while

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile" ):
                listener.enterWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile" ):
                listener.exitWhile(self)




    def while_(self):

        localctx = AGONYParser.WhileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_while)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.match(AGONYParser.T__10)
            self.state = 174
            self.boolexpression()
            self.state = 175
            self.match(AGONYParser.T__4)
            self.state = 176
            self.match(AGONYParser.INDENT)
            self.state = 178 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 177
                    self.line()

                else:
                    raise NoViableAltException(self)
                self.state = 180 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,22,self._ctx)

            self.state = 184
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,23,self._ctx)
            if la_ == 1:
                self.state = 182
                self.match(AGONYParser.DEDENT)
                pass

            elif la_ == 2:
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self):
            return self.getToken(AGONYParser.VARNAME, 0)

        def value(self):
            return self.getTypedRuleContext(AGONYParser.ValueContext,0)


        def INDENT(self):
            return self.getToken(AGONYParser.INDENT, 0)

        def DEDENT(self):
            return self.getToken(AGONYParser.DEDENT, 0)

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AGONYParser.LineContext)
            else:
                return self.getTypedRuleContext(AGONYParser.LineContext,i)


        def getRuleIndex(self):
            return AGONYParser.RULE_for

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor" ):
                listener.enterFor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor" ):
                listener.exitFor(self)




    def for_(self):

        localctx = AGONYParser.ForContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_for)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 186
            self.match(AGONYParser.T__11)
            self.state = 187
            self.match(AGONYParser.VARNAME)
            self.state = 188
            self.match(AGONYParser.T__12)
            self.state = 189
            self.value()
            self.state = 190
            self.match(AGONYParser.T__4)
            self.state = 191
            self.match(AGONYParser.INDENT)
            self.state = 193 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 192
                    self.line()

                else:
                    raise NoViableAltException(self)
                self.state = 195 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,24,self._ctx)

            self.state = 199
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,25,self._ctx)
            if la_ == 1:
                self.state = 197
                self.match(AGONYParser.DEDENT)
                pass

            elif la_ == 2:
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





